--- a/changelog.d/20250426_083942_wael.alkhatib_Restrictions.md
+++ b/changelog.d/20250426_083942_wael.alkhatib_Restrictions.md
@@ -1,3 +1,3 @@
 ### Added
 
-- Add limits on user, team and global levels with file size and type checks
+- Limits on user, team and global levels with file size and type checks
